--- a/css/index.css
+++ b/css/index.css
@@ -1,42 +1,14 @@
-body{
-  background-color: #000000;
+div {
+  display: flex;
+  color: #333;
+  vertical-align: middle;
+  align-items: center;
+  margin-bottom: 10px;
 }
-.moon{
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  background-color: #F0E68C;
-  border-radius: 50%;
-  box-shadow: 0px 0px 7px #fff8dc;
-  position: absolute;
-  top: 60px;
-  left: 200px;
-  width: 40px;
-  height: 40px;
-  offset-path: path('M 10 80 C 80 10, 130 10, 190 80 S 300 150, 360 80');
-  offset-path: path('M 20 20 C -20 100, 220 200 220 220');
-  animation: move 3000ms infinite linear;
+div span:nth-child(1) {
+  font-size: 18px;
 }
-.snow > div {
-  display: inline-block;
-  position: absolute;
-  top: 100px;
-  left: 300px;
-}
-.snow > div > span {
-  width: 40px;
-  height: 40px;
-  display: inline-block;
-  background-color: #eee;
-}
-*{
-  font-size: 0;
-}
-@keyframes move {
-  0% {
-      offset-distance: 0%;
-  }
-  100% {
-      offset-distance: 100%;
-  }
+div span:nth-child(2) {
+  font-size: 14px;
+  margin-left: 20px;
 }
